--- a/templates/edit.html
+++ b/templates/edit.html
@@ -8,9 +8,9 @@
 <input type="hidden" id="id" name="id" value="">
 {% endif %}
 <p>Name</p>
-<input type="text" id="name" name="name" value="{% if detailedItem %}{{ detailedItem.name }}{% endif %}" required>
+<input type="text" id="name" name="name" value="{% if detailedItem %}{{ detailedItem.name }}{% endif %}" autocomplete="off" required>
 <p>Barcodes</p>
-<input type="text" id="barcode" name="barcode" value="{% if detailedItem %}{% if detailedItem.barcodes|length > 0 %}{% for barcode in detailedItem.barcodes %}{{ barcode.barcode }}{% if not loop.last %},{% endif %}{% endfor %}{% endif %}{% endif %}">
+<input type="text" id="barcode" name="barcode" value="{% if detailedItem %}{% if detailedItem.barcodes|length > 0 %}{% for barcode in detailedItem.barcodes %}{{ barcode.barcode }}{% if not loop.last %},{% endif %}{% endfor %}{% endif %}{% endif %}" autocomplete="off" autofocus>
 <p>Parent ID</p>
 <input type="number" id="parent" name="parent" value="{% if detailedItem %}{{ detailedItem.parent.id }}{% endif %}">
 <p>Owners</p>
