--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
         {% endif %}
     </title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}"" />
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}" />
+    
 </head>
 <body>
     <div class="container">
@@ -32,7 +33,7 @@
             </div>
             <div class="search-container">
                 <form action="/search" method="POST">
-                    <input type="text" name="search" placeholder="Search for any item..." value="{% if search %}{{ search }}{% endif %}"
+                    <input type="text" name="search" id="search" placeholder="Search for any item..." value="{% if search %}{{ search }}{% endif %}"
                     autocomplete="off" onfocus="this.select();" {% if not adding and not editing %}autofocus{% endif %} />
                 </form>
             </div>
@@ -64,57 +65,100 @@
         {% endblock %}
         {% block table %}
         {% if items|length > 0 %}
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Barcode</th>
-                {% if show_parent %}
-                <th>Location</th> <!-- Parent, to be deleted from showing -->
-                {% endif %}
-                <th>Ownership</th>
-                <th>Children</th>
-                <th></th>
-            </tr>
-            {% for item in items %}
-            <tr title="Item ID: {{ item.id }}&#10;Created: {{ item.created }}&#10;Modified: {{ item.modified }}" >
-                <td><a href="/details/{{ item.id }}" class="rowlink"></a>{{ item.name }}</td>
-                <td title="{% if item.barcodes|length > 1 %}{% for barcode in item.barcodes %}{{ barcode.barcode }}, {% endfor %}{% endif %}">
-                    {% if item.barcodes|length > 1 %}
-                    {{ item.barcodes[0].barcode }} +
-                    {% elif item.barcodes|length == 1 %}
-                    {{ item.barcodes[0].barcode }}
-                    {% else %}
-                    No barcode
+        <div class="table-container">
+            <div class="delete-dialog dialog-box" id="delete-dialog">
+                <p>Are you sure you want to delete the selected items?</p>
+                <div class="buttons">
+                    <button class="button delete-button" id="delete-yes">Yes</button>
+                    <button class="button" id="delete-no">No</button>
+                </div>
+            </div>
+            <div class="change-ownership-dialog dialog-box" id="change-ownership-dialog">
+                <p>Change ownership of the selected items</p>
+                <select id="change-ownership-dialog-ownerships" class="owners">
+                    <option value="">No owner</option>
+                    {% for owner in owners %}
+                    <option value="{{ owner.id }}">{{ owner.name }}</option>
+                    {% endfor %}
+                </select>
+                <div class="buttons">
+                    <button class="button upload-button" id="change-ownership-yes">Change</button>
+                    <button class="button" id="change-ownership-no">Cancel</button>
+                </div>
+            </div>
+            <div class="change-parent-dialog dialog-box" id="change-parent-dialog">
+                <p>Change parent of the selected items</p>
+                <input type="number" id="change-parent-dialog-parent" name="parent" />
+                <div class="buttons">
+                    <button class="button upload-button" id="change-parent-yes">Change</button>
+                    <button class="button" id="change-parent-no">Cancel</button>
+                </div>
+            </div>
+            <table>
+                <tr>
+                    <th>
+                        <input type="checkbox" id="selectAll" />
+                    </th>
+                    <th>Name</th>
+                    <th>Barcode</th>
+                    {% if show_parent %}
+                    <th>Location</th> <!-- Parent, to be deleted from showing -->
                     {% endif %}
-                </td>
-                {% if show_parent %}
-                <td>{{ item.parent.name }}</td>
-                {% endif %}
-                <td title="{% if item.ownerships|length > 1 %}{% for ownership in item.ownerships %}{{ ownership.owner.name }} - {{ ownership.own }}%&#10;{% endfor %}{% endif %}">
-                    {% if item.ownerships|length > 1 %}
-                    Shared
-                    {% elif item.ownerships|length == 1 %}
-                    {{ item.ownerships[0].owner.name }}
-                    {% else %}
-                    No owner
-                    {% endif %}
-                </td>
-                <td>{{ item.children|length }}</td>
-                <td>
-                    <div class="buttons">
-                        {% if item.children|length > 0 %}
-                        <form action="/delete/{{ item.id }}" method="POST" onsubmit="return confirm('Are you sure you want to delete &quot;{{ item.name }}&quot;?');">
-                            <input type="submit" class="button delete-child-button" value="Delete with children" />
-                        </form>
+                    <th>Ownership</th>
+                    <th>Children</th>
+                    <th></th>
+                </tr>
+                {% for item in items %}
+                <tr title="Item ID: {{ item.id }}&#10;Created: {{ item.created }}&#10;Modified: {{ item.modified }}" >
+                    <td>
+                        <input type="checkbox" id="{{ item.id }}" class="select" />
+                    </td>
+                    <td><a href="/details/{{ item.id }}" class="rowlink">{{ item.name }}</a></td>
+                    <td title="{% if item.barcodes|length > 1 %}{% for barcode in item.barcodes %}{{ barcode.barcode }}, {% endfor %}{% endif %}">
+                        {% if item.barcodes|length > 1 %}
+                        {{ item.barcodes[0].barcode }} +
+                        {% elif item.barcodes|length == 1 %}
+                        {{ item.barcodes[0].barcode }}
+                        {% else %}
+                        No barcode
                         {% endif %}
-                        <form action="/delete/{{ item.id }}" method="POST" onsubmit="return confirm('Are you sure you want to delete &quot;{{ item.name }}&quot;?');">
-                            <input type="submit" class="button delete-button" value="Delete" />
-                        </form>
-                    </div>
-                </td>
-            </tr>
-            {% endfor %}
-        </table>
+                    </td>
+                    {% if show_parent %}
+                    <td>{{ item.parent.name }}</td>
+                    {% endif %}
+                    <td title="{% if item.ownerships|length > 1 %}{% for ownership in item.ownerships %}{{ ownership.owner.name }} - {{ ownership.own }}%&#10;{% endfor %}{% endif %}">
+                        {% if item.ownerships|length > 1 %}
+                        Shared
+                        {% elif item.ownerships|length == 1 %}
+                        {{ item.ownerships[0].owner.name }}
+                        {% else %}
+                        No owner
+                        {% endif %}
+                    </td>
+                    <td>{{ item.children|length }}</td>
+                    <td>
+                        <div class="buttons">
+                            {% if item.children|length > 0 %}
+                            <form action="/delete/{{ item.id }}" method="POST" onsubmit="return confirm('Are you sure you want to delete &quot;{{ item.name }}&quot;?');">
+                                <input type="submit" class="button delete-child-button" value="Delete with children" />
+                            </form>
+                            {% endif %}
+                            <form action="/delete/{{ item.id }}" method="POST" onsubmit="return confirm('Are you sure you want to delete &quot;{{ item.name }}&quot;?');">
+                                <input type="submit" class="button delete-button" value="Delete" />
+                            </form>
+                        </div>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
+            <div class="buttons" id="table-modify-buttons">
+                <button class="button delete-button" id="delete-selected" >Delete selected</button>
+                <button class="button" id="change-ownership">Modify ownership</button>
+                <button class="button" id="change-parent">Modify parent</button>
+            </div>
+            <p id="table-error-message"></p>
+            <script src="{{ url_for('static', filename='checkboxes.js') }}"></script>
+        </div>
         {% endif %}
         {% endblock %}
     </div>
