--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
         {% block topContainer %}
         {% endblock %}
         {% block table %}
-        {% if items.items|length > 0 %}
+        {% if items and items.items|length > 0 %}
         <div class="table-container">
             <div class="delete-dialog dialog-box" id="delete-dialog">
                 <p>Are you sure you want to delete the selected items?</p>
