--- a/templates/edit.html
+++ b/templates/edit.html
@@ -12,7 +12,7 @@
 <p>Barcodes</p>
 <input type="text" id="barcode" name="barcode" value="{% if detailedItem %}{% if detailedItem.barcodes|length > 0 %}{% for barcode in detailedItem.barcodes %}{{ barcode.barcode }}{% if not loop.last %},{% endif %}{% endfor %}{% endif %}{% endif %}" autocomplete="off" autofocus>
 <p>Parent Barcode or ID</p>
-<input type="text" id="parent" name="parent" value="{% if detailedItem %}{{ detailedItem.parent.id }}{% endif %}">
+<input type="text" id="parent" name="parent" value="{% if detailedItem %}{{ detailedItem.parent.id }}{% elif parent_id %}{{ parent_id }}{% endif %}">
 <p>Owners</p>
 <div id="ownerships">
     {% if detailedItem %}{% for ownership in detailedItem.ownerships %}
