Add login functionality, fixes #4 Added default ownership, fixes #5

--- a/static/style.css
+++ b/static/style.css
@@ -388,3 +388,11 @@ div#table-modify-buttons{
     /* width: fit-content; */
     margin: 0 auto;
 }
+
+div.login-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+    flex-direction: column;
+}
